<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:id="@+id/toolbar"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_height="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <TextView
        android:fontFamily="sans-serif"
        android:id="@+id/app_name_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#f4ad59"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/nav_menu_description"
        android:id="@+id/slide_in_menu_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="30dp"
        android:onClick="onDrawerClick"
        android:src="@drawable/ic_menu" />

</android.support.v7.widget.Toolbar>