<resources>
    <string name="app_name">Eat</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">SEND</string>
    <string name="edit_message">Your words.</string>
    <string name="app_name_title">EAT</string>
    <string name="left_menu">left menu</string>
    <string name="restaurants_near_you">Restaurants near you:</string>
    <string name="card_image">Card_image</string>
    <string name="delicious_restaurant_1">Delicious Restaurant 1</string>
    <string name="restaurant_description_1">This is supposedly an amazing restaurant okay.</string>
    <string name="restaurant_distance_text">0.7 mi</string>
    <string name="defaultRestaurantItemDistance">0 Miles</string>
    <string name="defaultRestaurantName">RestaurantName</string>
    <string name="restaurantItemImageViewDescription">Picture of the Restaurant</string>
    <string name="nearbyRestaurantsHeader">Something funny</string>
    <string name="decription_title">Description</string>
    <string name="done_button">Done</string>
    <string name="type_your_description_here">Type your description here.</string>
    <string name="enter_your_description">Enter your description.</string>
    <string-array name="types_of_food">
        <item name="chinese">Chinese Cuisine</item>
        <item name="indian">Indian Cuisine</item>
        <item name="fast">Fast Food</item>
        <item name="upscale">Upscale</item>
        <item name="slovak">Slovakian Cuisine</item>
        <item name="affordable">Affordable</item>
        <item name="other">Other</item>
    </string-array>
    <string name="type_of_food_title">Type of Food</string>
    <string name="name_hint">Restaurant Name</string>
    <string name="address_hint">Address</string>
    <string name="zipcode_hint">Zip</string>
    <string name="state_hint">State</string>
    <string name="typeOfFood">Type of food?</string>
    <string name="hours_restaurant">Hours?</string>
    <string name="menu_detail">Menu</string>
    <string name="description_restaurant">Description</string>
    <string name="add_category">+ Add Category</string>
    <string name="delete_category">- Delete Category</string>
    <string name="opening_hours_title">Opening Hours</string>
    <string name="opening_hours_sunday">Sunday:</string>
    <string name="opening_hours_monday">Monday:</string>
    <string name="opening_hours_tuesday">Tuesday:</string>
    <string name="opening_hours_wednesday">Wednesday:</string>
    <string name="opening_hours_thursday">Thursday:</string>
    <string name="opening_hours_friday">Friday:</string>
    <string name="opening_hours_saturday">Saturday:</string>
    <string name="placeholder_string_opening_hours_start">09:00</string>
    <string name="placeholder_string_opening_hours_end">17:00</string>
    <string name="appetizers_headline">Appetizers</string>
    <string name="menu_title">Menu</string>
    <string name="add_meal">+ Add meal</string>
    <string name="delete_meal">- delete meal</string>
    <string name="nav_menu_description">Navigation Menu</string>
    <string name="owner_restaurant_add_btn">Add a new Restaurant</string>
    <string name="restaurant_owner_tv">Restaurants you manage:</string>
    <string name="add_restaurant_country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="loading">Loading…</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_submit">Submit</string>
    <string name="e_mail_login">E-mail</string>
    <string name="password_login">Password</string>
    <string name="login_prompt">Login:</string>
    <string name="forgot_password_login">forgot password</string>
    <string name="error_message_login">This is the error message.</string>
    <string name="checkout_button">Checkout</string>
    <string name="meal_name_hint">Meal Name</string>
    <string name="meal_description_hint">Meal Description</string>
    <string name="meal_price_hint">Meal Price</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_txt">Login</string>
    <string name="btn_forgot_password">Forgot your Password</string>
    <string name="btn_link_to_register">Not already a member? Register Here!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="profile_placeholder_txt">You should be seeing some general information about your profile and should be able to edit some of it here.</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="btn_link_to_login">Not a member? Get registered Now!</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your email to send you password reset information</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="username_hint_signup">Username</string>
    <string-array name="navigation_drawer_options">
        <item>Home</item>
        <item>Profile</item>
        <item>Map</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About The Team</item>
        <item>Favorite Restaurant</item>
        <item>Restaurant Owners</item>
        <item>Favorite Restaurants</item>
    </string-array>
    <string-array name="opening_hours_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="new_pass">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="hint_username">Username</string>
    <string name="user_profile_update_submit_txt">Submit</string>
    <string name="btn_add_category_text">Add Category</string>
    <string name="settings_title">Settings</string>
    <string name="show_save_to_favorites_button">Show Save to Favorites button.</string>
    <string name="preferences">Preferences</string>
    <string name="sort_restaurants_by_rating_not_proximity">Sort restaurants by rating, not proximity.</string>
    <string name="system">System</string>
    <string name="show_notifications_for_favorite_nearby_places">Show notifications for favorite nearby places.</string>
    <string name="show_restaurant_owner_section">Show Restaurant Owner section.</string>
    <string name="about_us">About Us</string>
    <string name="zephyr">Zephyr</string>
    <string name="courtney">Courtney</string>
    <string name="zephyr_description">Zephyr works very hard to develop all aspects of the EAT app. He strings together everyone else\'s contributions, so that they complement each other neatly in a seamless way so that you can have the best possible experience.</string>
    <string name="zephyr_s_potrait_image">Zephyr\'s portrait image</string>
    <string name="courtney_s_portrait_image">Courtney\'s portrait image</string>
    <string name="courtney_description">Courtney is hard at work making the EAT app both beautiful and easy to navigate. At the same time, she makes sure everything is in order and that we comply with newest coding and design standards.</string>
    <string name="mit_s_portrait_image">Mit\'s portrait image</string>
    <string name="mit">Mit</string>
    <string name="mit_description">Mit often works day and night to deliver the best possible backend solutions for our EAT app. He takes particular care that we are using the newest frameworks and technologies put out.</string>
    <string name="tomas_s_portrait_image">Tomas\'s portrait image</string>
    <string name="tomas_description">Tomas contributes significantly to our app\'s visuals and takes care that all the translations are in order as he\'s from Europe. He takes particular care to support the team logistically and to fill in when other team members are not available.</string>
    <string name="title_activity_nearby_restaurant_map">Map</string>
    <string name="tomas">Tomas</string>
</resources>
