<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/activity_content"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</LinearLayout>
